fenrir-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fenrir
  labels:
    app.kubernetes.io/name: fenrir
spec:
  rules:
    - host: fenrir.ekcelacademy.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fenrir-frontend
                port:
                  number: 80
    - host: fenrirbackend.ekcelacademy.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fenrir-backend
                port:
                  number: 80
    - host: fenrirexpress.ekcelacademy.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-express
                port:
                  number: 80
